--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,2 +1,11 @@
 page-login {
+  .bg-style {
+    background: #dfe4ea;
+  }
+  .ion-card {
+    border-radius: 10px;
+  }
+  .login{
+    border-radius: 10px;
+  }
 }
