--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -32,5 +32,8 @@ page-tutorial {
       color: #000000;
     }
   }
+  .swiper-pagination-progress .swiper-pagination-progressbar {
+    background: #ffa801;
+  }
 
 }
