--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,11 +25,15 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #303952,
+  secondary:  #079992,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #DAE7F8,
+  dark:       #222,
+  myyellow:     #ffd32a,
+  myorange:     #ffa801,
+  mygray:     #dfe4ea,
+  darkgray:   #888,
 );
 
 
