--- a/src/pages/item-create/item-create.scss
+++ b/src/pages/item-create/item-create.scss
@@ -1,15 +1,18 @@
 page-item-create {
+  .bg-style {
+    background: #dfe4ea;
+  }
+
   .profile-image-wrapper {
     text-align: center;
-    margin: 20px 0;
+    margin: 10px 0;
 
     .profile-image {
-      width: 96px;
-      height: 96px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
 
       display: inline-block;
-
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -18,9 +21,9 @@ page-item-create {
     .profile-image-placeholder {
       display: inline-block;
 
-      background-color: #eee;
-      width: 96px;
-      height: 96px;
+      background-color: #f6f6f6;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
 
       font-size: 12px;
@@ -31,5 +34,36 @@ page-item-create {
         margin-top: 10px;
       }
     }
+  }
+  .input-cv{
+    background-color: #f6f6f6;
+    border-radius: 7px;
+    height: 40px;
+  }
+  .textarea-cv {
+    background-color: #f6f6f6;
+    border-radius: 7px;
+    height: 140px;
+  }
+
+  .label-cv {
+    padding-left: 10px;
+    color: darkgray;
+  }
+  .card-md {
+    border-radius: 10px;
+    padding-bottom: 40px;
+  }
+  .btn-cv {
+    border-radius: 5px;
+  }
+  ion-card{
+    height: 100%;
+  }
+  .swiper-pagination-progress .swiper-pagination-progressbar {
+    background: #ffa801;
+  }
+  .card-cv {
+    border-radius: 10px;
   }
 }
