--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -30,17 +30,23 @@ page-welcome {
   .splash-intro {
     font-size: 18px;
     font-weight: bold;
-    max-width: 80%;
+    max-width: 100%;
     margin: auto;
   }
   button.login {
     margin-top: 25px;
     background-color: white;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+    border-color: #303952;
     color: #333;
+    border-radius: 10px;
 
     &.activated {
       background-color: rgb(220, 220, 220);
     }
+  }
+  button.signup{
+    background-color: #079992;
+    border-radius: 10px;
   }
 }
